tests/invalid/invalid_duplicate_constraints.csl
config InvalidDupConstraints {
  a: boolean;
  constraints { validate a; };
  constraints { validate !a; };
}
